# eneco-energy

./: README.md  index.html  metadata.json  package-lock.json  package.json  td.html  vite.config.ts
src/: App.tsx  TDPage.tsx  images.d.ts  index.css  main.tsx  td-main.tsx
src/components/: Battery.tsx  FigmaCanvas.tsx  GaugeChart.tsx  SoundParticles.tsx  SurgeSparks.tsx
src/hooks/: useMotionDetection.ts
src/operator/: OperatorApp.tsx
td/: .gitignore  eneco-td-controller.toe
td/python/: README.md  person_detect.py  pyproject.toml
